# stac-gti-xarray

./: Dockerfile  README.md  demo.ipynb  docker-compose.yml  pyproject.toml
