[project]
name = "stac-gti-xarray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.11.0",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "rasterio>=1.4.3",
    "rio-tiler>=7.9.2",
    "rioxarray>=0.20.0",
    "rustac>=0.8.4",
    "xarray>=2025.10.1",
]
